--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^8.16.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -25,6 +26,7 @@
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "react-spring": "^9.7.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
